postgres.volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-cinder
spec:
  containers:
  - image: k8s.gcr.io/postgres-webserver
    name: postgres-cinder-container
    volumeMounts:
      - mountPath: /var/lib/postgresql/data
        name: postgres-pv-claim
    volumes:
    - name: postgres-pv-claim
      persistentVolumeClaim:
        claimName: postgres-pv-claim
