traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      containers:
        - name: traefik
          image: traefik:1.7
          ports:
            # Port 80 is the HTTP proxy
            - name: http
              containerPort: 80
            # Port 8080 is the admin dashboard
            - name: admin
              containerPort: 8080
          resources:
            limits:
              memory: "500M"
              cpu: "250m"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions: [{ key: app, operator: In, values: [result] }]
              topologyKey: "kubernetes.io/hostname"
